# truenorth

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  config.toml.example  docker-compose.yml  fly.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: README.md
crates/truenorth-cli/: Cargo.toml
crates/truenorth-cli/src/: init.rs  lib.rs  main.rs
crates/truenorth-cli/src/commands/: config.rs  memory.rs  mod.rs  resume.rs  run.rs  serve.rs  skill.rs  version.rs
crates/truenorth-cli/src/output/: json.rs  mod.rs  terminal.rs
crates/truenorth-core/: Cargo.toml
crates/truenorth-core/src/: constants.rs  error.rs  lib.rs
crates/truenorth-core/src/traits/: checklist.rs  context.rs  deviation.rs  embedding_provider.rs  execution.rs  heartbeat.rs  llm_provider.rs  llm_router.rs  memory.rs  mod.rs  reasoning.rs  session.rs  skill.rs  state.rs  tool.rs  wasm.rs
crates/truenorth-core/src/types/: config.rs  context.rs  event.rs  llm.rs  memory.rs  message.rs  mod.rs  plan.rs  routing.rs  session.rs  skill.rs  task.rs  tool.rs
crates/truenorth-core/tests/: smoke.rs
crates/truenorth-llm/: Cargo.toml
crates/truenorth-llm/src/: context_serializer.rs  lib.rs  rate_limiter.rs  router.rs  stream.rs
crates/truenorth-llm/src/embedding/: fastembed_provider.rs  mock_embed.rs  mod.rs  openai_embed.rs
crates/truenorth-llm/src/providers/: anthropic.rs  google.rs  mock.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs
crates/truenorth-llm/tests/: integration.rs  live_providers.rs
crates/truenorth-memory/: Cargo.toml
crates/truenorth-memory/src/: lib.rs
crates/truenorth-memory/src/consolidation/: consolidator.rs  mod.rs  scheduler.rs
crates/truenorth-memory/src/identity/: dialectic.rs  mod.rs  profile.rs  sqlite_store.rs
crates/truenorth-memory/src/obsidian/: mod.rs  reindexer.rs  watcher.rs  wikilink.rs
crates/truenorth-memory/src/project/: deduplicator.rs  markdown_writer.rs  mod.rs  sqlite_store.rs
crates/truenorth-memory/src/search/: fulltext.rs  hybrid.rs  mod.rs  semantic.rs
crates/truenorth-memory/src/session/: compactor.rs  mod.rs  store.rs
crates/truenorth-memory/tests/: integration.rs
crates/truenorth-orchestrator/: Cargo.toml
crates/truenorth-orchestrator/src/: lib.rs  orchestrator.rs
crates/truenorth-orchestrator/src/agent_loop/: executor.rs  mod.rs  planner.rs  state_machine.rs  step_runner.rs
crates/truenorth-orchestrator/src/checklist/: mod.rs  verifier.rs
crates/truenorth-orchestrator/src/context/: budget_manager.rs  compaction_policy.rs  mod.rs
crates/truenorth-orchestrator/src/deviation/: mod.rs  tracker.rs
crates/truenorth-orchestrator/src/execution_modes/: direct.rs  graph.rs  mod.rs  parallel.rs  rcs.rs  sequential.rs
crates/truenorth-orchestrator/src/heartbeat/: mod.rs  scheduler.rs
crates/truenorth-orchestrator/src/loop_guard/: mod.rs  semantic_similarity.rs  step_counter.rs  watchdog.rs
crates/truenorth-orchestrator/src/session/: handoff.rs  manager.rs  mod.rs  serializer.rs
crates/truenorth-orchestrator/tests/: smoke.rs
crates/truenorth-skills/: Cargo.toml
crates/truenorth-skills/src/: installer.rs  lib.rs  loader.rs  parser.rs  registry.rs  trigger.rs  validator.rs
crates/truenorth-skills/tests/: integration.rs
crates/truenorth-tools/: Cargo.toml
crates/truenorth-tools/src/: lib.rs  registry.rs
crates/truenorth-tools/src/audio/: mod.rs
crates/truenorth-tools/src/builtin/: file_list.rs  file_read.rs  file_write.rs  memory_query.rs  mermaid_render.rs  mod.rs  shell_exec.rs  web_fetch.rs  web_search.rs
crates/truenorth-tools/src/mcp/: adapter.rs  client.rs  mod.rs
crates/truenorth-tools/src/sandbox/: capabilities.rs  fuel.rs  mod.rs  wasmtime_host.rs
crates/truenorth-tools/tests/: cross_crate.rs  wasm_sandbox.rs
crates/truenorth-visual/: Cargo.toml
crates/truenorth-visual/src/: aggregator.rs  event_bus.rs  event_store.rs  lib.rs  mermaid.rs  renderer.rs  types.rs
crates/truenorth-visual/tests/: cross_crate.rs
crates/truenorth-web/: Cargo.toml
crates/truenorth-web/src/: lib.rs
crates/truenorth-web/src/frontend/: mod.rs
crates/truenorth-web/src/server/: errors.rs  mod.rs  router.rs  state.rs
crates/truenorth-web/src/server/handlers/: a2a.rs  api.rs  mod.rs  sse.rs  websocket.rs
crates/truenorth-web/src/server/middleware/: auth.rs  cors.rs  mod.rs
crates/truenorth-web/static/: index.html
crates/truenorth-web/static/css/: style.css
crates/truenorth-web/static/js/: api.js  app.js  events.js  mermaid-init.js  websocket.js
docs/: ARCHITECTURE.md  CONVERSATION_SUMMARY.md  DEPLOYMENT.md  DEVELOPMENT.md  HANDOFF.md  NEGATIVE_CHECKLIST.md  P0-P5-SPEC.md  SECURITY.md  SKILL_FORMAT.md  orchestrator-fix-reference.md  truenorth-research-paper-v2.md
docs/adr/: 0001-all-rust-architecture.md  0002-leptos-frontend.md  0003-three-tier-memory.md
docs/api/: rest.md  websocket.md
skills/builtin/: code-reviewer.md  rcs-debate.md  research-assistant.md
