[workspace]
resolver = "2"
members = [
    "crates/truenorth-core",
    "crates/truenorth-llm",
    "crates/truenorth-memory",
    "crates/truenorth-tools",
    "crates/truenorth-skills",
    "crates/truenorth-visual",
    "crates/truenorth-orchestrator",
    "crates/truenorth-web",
    "crates/truenorth-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/THTProtocol/truenorth"
authors = ["THTProtocol <hightable.market@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Identifiers and time
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP and networking
reqwest = { version = "0.13", features = ["json", "stream"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Search
tantivy = "0.26"

# WASM sandbox
wasmtime = "43.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# File watching
notify = "8.2"

# JSON Schema
schemars = "1.2"

# Futures and streams
futures = "0.3"
tokio-stream = "0.1"
pin-project-lite = "0.2"

# Concurrency utilities
parking_lot = "0.12"
rand = "0.9"

# Testing
pretty_assertions = "1.4"
tempfile = "3.14"
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
strip = "none"
