[package]
name = "truenorth-cli"
description = "TrueNorth CLI: command-line interface for the AI orchestration harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "truenorth"
path = "src/main.rs"

[dependencies]
truenorth-core = { path = "../truenorth-core" }
truenorth-orchestrator = { path = "../truenorth-orchestrator" }
truenorth-web = { path = "../truenorth-web" }

# CLI framework
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
