[package]
name = "truenorth-skills"
description = "Skill loading, SKILL.md parsing, progressive disclosure, and marketplace integration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
truenorth-core = { path = "../truenorth-core" }

async-trait = { workspace = true }
tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP for marketplace/community skill installation
reqwest = { version = "0.12", features = ["json"] }

# Filesystem glob scanning
glob = "0.3"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = { workspace = true }
