[package]
name = "truenorth-tools"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
description = "Tool registry, built-in tools, WASM sandbox host, and MCP adapter for TrueNorth"

[features]
default = []
voice = []

[dependencies]
# Internal
truenorth-core = { path = "../truenorth-core" }

# Async runtime
tokio = { version = "1.51", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "2.0"

# Tracing / logging
tracing = "0.1"

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# WASM sandbox
wasmtime = { version = "43.0", features = ["async", "cranelift"] }
wasmtime-wasi = { version = "36.0", features = ["preview1"] }

# Byte buffer (used by wasmtime-wasi pipes)
bytes = "1.0"

[dev-dependencies]
tokio = { version = "1.51", features = ["full", "test-util"] }
tempfile = "3.14"
