[package]
name = "truenorth-visual"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Visual Reasoning Layer: event bus, reasoning store, Mermaid rendering, and aggregation for TrueNorth"

[dependencies]
# Core contract layer
truenorth-core = { path = "../truenorth-core" }

# Async runtime
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

# Async trait support
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite with bundled sqlite for portability
rusqlite = { version = "0.39", features = ["bundled"] }

# Error handling
thiserror = "2"

# Logging and tracing
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
