[package]
name = "truenorth-web"
description = "Axum HTTP server with REST API, WebSocket, SSE, and frontend stubs for TrueNorth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
truenorth-core = { path = "../truenorth-core" }
truenorth-visual = { path = "../truenorth-visual" }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
